# toy-sphincs-off-switch

./: .gitignore  LEARNING_PLAN.md  LEARNING_PLAN_CN.md  OFF_SWITCH_ASSESSMENT.md  OFF_SWITCH_ASSESSMENT_CN.md  README.md  demo.py  pyproject.toml  run_demo.ps1  run_tests.ps1
benchmarks/: README.md  RESULTS.md  requirements.txt  setup_no_sudo.sh  slh_dsa_benchmark.py
examples/: __init__.py  demo.py
tests/: __init__.py  test_toy.py
toy_sphincs/: __init__.py  aggregation.py  fors.py  merkle.py  off_switch.py  params.py  sphincs.py  utils.py  wots.py
