[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toy-sphincs-off-switch"
version = "0.1.0"
description = "Deliberately insecure educational SPHINCS+-inspired Off-Switch prototype"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["toy_sphincs"]
